--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $menu = wofi --show drun
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-# exec-once = $terminal
+exec-once = hyprsunset
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
