enhance tmux status bar

--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -67,11 +67,12 @@ set -g window-status-current-format "\
 ####### SESSION BUBBLE (RIGHT SIDE) #######
 # Changes color dynamically when prefix key is pressed
 set -g status-right "\
-#[fg=#{@text_color},bg=#{?client_prefix,#{@prefix_color},#{@session_color}}] #S \
+#[fg=#{?client_prefix,#{@prefix_color},#{@session_color}},bg=default]\
+#[fg=#{@text_color},bg=#{?client_prefix,#{@prefix_color},#{@session_color}}]  #S \
 #[fg=#{?client_prefix,#{@prefix_color},#{@session_color}},bg=default]  "
-####### TMUX BUBBLE (left SIDE) #######
 set -g status-left "\
 #[fg=#{@left_bubble_color},bg=default]\
-#[fg=#{@text_color},bg=#{@left_bubble_color}] TMUX: #(tmux list-sessions | wc -l | tr -d '[:space:]') "
+#[fg=#{@text_color},bg=#{@left_bubble_color}] 󰓩 #(tmux list-sessions | wc -l | tr -d '[:space:]') \
+#[fg=#{@left_bubble_color},bg=default]"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
