--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -46,7 +46,7 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = hyprsunset
-exec-once = tmux new-session -d -s scratch_session
+exec-once = ~/.tmuxp/load_sessions.sh
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
