--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -47,6 +47,8 @@ $menu = wofi --show drun
 
 exec-once = hyprsunset
 exec-once = ~/.tmuxp/load_sessions.sh
+# gui for apps to request elevated priveleges
+exec-once = systemctl --user start hyprpolkitagent
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
