--- a/alacritty/dot-config/alacritty/alacritty.toml
+++ b/alacritty/dot-config/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
+[env]
+TERM = "xterm-256color"
 [general]
-import = [
-    "~/.config/alacritty/themes/tokyo_night_enhanced.toml"
-]
+import = ["~/.config/alacritty/themes/tokyo_night_enhanced.toml"]
 [window]
 opacity = 0.98
 padding.x = 200
