--- a/hypr/dot-config/hypr/conf/auto_start.conf
+++ b/hypr/dot-config/hypr/conf/auto_start.conf
@@ -12,3 +12,4 @@ exec-once = ~/.tmuxp/load_sessions.sh
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hyprpm reload -n
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=waybar
