--- a/hypr/dot-config/hypr/hyprland.conf
+++ b/hypr/dot-config/hypr/hyprland.conf
@@ -1,5 +1,5 @@
  source = ~/.config/hypr/conf/*
- execr = notify-send "config reloaded"
+ # execr = notify-send "config reloaded"
 
 ###################
 ### PERMISSIONS ###
