fix stow packages and add fuzzel

--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -8,7 +8,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = alacritty
 $browser = qutebrowser
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, O, exec, $browser
