--- a/tmux/dot-tmux.conf
+++ b/tmux/dot-tmux.conf
@@ -25,7 +25,7 @@ bind C-q kill-session
 unbind q
 bind q kill-window
 #################################################
-bind e run "/home/khalil/.local/bin/vim_edit"
+bind e run "/home/khalil/.config/scripts/vim_edit"
 #################################################
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
