--- a/hypr/dot-config/hypr/conf/auto_start.conf
+++ b/hypr/dot-config/hypr/conf/auto_start.conf
@@ -6,10 +6,11 @@
 # Or execute your favorite apps at launch like this:
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = ~/.tmuxp/load_sessions.sh
 # gui for apps to request elevated priveleges
 exec-once = systemctl --user start hyprpolkitagent
 # exec-once = hyprpm reload -n
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=waybar
