change dots sessiion

--- a/tmux/dot-tmuxp/dots.yaml
+++ b/tmux/dot-tmuxp/dots.yaml
@@ -3,9 +3,6 @@ suppress_history: true
 start_directory: ${HOME}/cyborgV2/
 windows:
   - window_name: "cyborgV2"
-    # shell_command_before: nvim
+    shell_command_before: nvim
     focus: true
-  - window_name: "cyborg"
-    start_directory: ~/cyborg/
-  - window_name: "dotfiles"
-    start_directory: ~/dotfiles/
+  - window_name: "shell"
