--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -10,6 +10,7 @@ exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRE
 exec-once = hyprpaper
 exec-once = hyprsunset
 exec-once = ~/.tmuxp/load_sessions.sh
+exec-once = ~/.config/hypr/scripts/blue-speaker.sh
 # gui for apps to request elevated priveleges
 exec-once = systemctl --user start hyprpolkitagent
 # exec-once = hyprpm reload -n
