--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -12,6 +12,7 @@ $menu = fuzzel
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, O, exec, $browser
 bind = $mainMod, Q, killactive,
+bind = $mainMod SHIFT, E, exec, wlogout -b 4 -T 400 -B 400
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
