--- a/hypr/dot-config/hypr/conf/auto-start.conf
+++ b/hypr/dot-config/hypr/conf/auto-start.conf
@@ -14,4 +14,5 @@ exec-once = ~/.config/hypr/scripts/blue-speaker.sh
 # gui for apps to request elevated priveleges
 exec-once = systemctl --user start hyprpolkitagent
 # exec-once = hyprpm reload -n
-exec-once=waybar
+execr = pkill waybar && waybar
+
