--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -17,9 +17,9 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, R, exec, "hyperctl reload"
+bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
-bind = SUPER, Z, exec, ~/.config/hypr/scripts/zoom.sh
+bind = $mainMod, Z, exec, ~/.config/hypr/scripts/zoom.sh
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
