--- a/qutebrowser/dot-config/qutebrowser/autoconfig.yml
+++ b/qutebrowser/dot-config/qutebrowser/autoconfig.yml
@@ -15,6 +15,7 @@ settings:
     https://cmp.saghen.dev: access-paste
     https://github.com: access-paste
     https://patorjk.com: access-paste
+    https://spicetify.app: access-paste
     https://wiki.hypr.land: access-paste
   content.media.audio_capture:
     https://mozilla.github.io: true
