--- a/waybar/dot-config/waybar/config.jsonc
+++ b/waybar/dot-config/waybar/config.jsonc
@@ -9,13 +9,12 @@
     "modules-left": ["hyprland/workspaces", "hyprland/window"],
     "hyprland/workspaces": {
         "disable-scroll": true,
-        "all-outputs": true,
+        "all-outputs": true
     },
     "hyprland/window": {
         "format": "{}",
         "max-length": 40
     },
-
     "modules-center": ["custom/music", "clock"],
     "custom/music": {
         "format": " 🎶  {}",
@@ -56,8 +55,23 @@
         "backlight",
         "battery",
         "tray",
+        "bluetooth",
         "custom/power"
     ],
+    "bluetooth": {
+        // "controller": "controller1", // specify the alias of the controller if there are more than 1 on the system
+        "format": " [{status}]",
+        "icon": "", // Default Bluetooth icon (on)
+        "tooltip": "Bluetooth",
+        "format-disabled": "", // an empty format will hide the module
+        "format-connected": " {device_alias}",
+        "on-click": "alacritty -e bluetui",
+        "on-click-floating": "true", // This will make the terminal floating and centered
+        "on-click-center": "true", // Center the window
+        "tooltip-format": "{controller_alias}\t{controller_address}",
+        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
+    },
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
