--- a/waybar/dot-config/waybar/config.jsonc
+++ b/waybar/dot-config/waybar/config.jsonc
@@ -65,9 +65,7 @@
         "tooltip": "Bluetooth",
         "format-disabled": "", // an empty format will hide the module
         "format-connected": " {device_alias}",
-        "on-click": "alacritty -e bluetui",
-        "on-click-floating": "true", // This will make the terminal floating and centered
-        "on-click-center": "true", // Center the window
+        "on-click": "~/.config/hypr/scripts/classy_alacritty.sh floatty bluetui",
         "tooltip-format": "{controller_alias}\t{controller_address}",
         "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}"
