--- a/waybar/dot-config/waybar/config.jsonc
+++ b/waybar/dot-config/waybar/config.jsonc
@@ -19,7 +19,7 @@
     "custom/music": {
         "format": " 🎶  {}",
         "escape": true,
-        "interval": 5,
+        "interval": 10,
         "tooltip": false,
         "exec": "playerctl metadata --format='{{ artist }} - {{ title }}'",
         "on-click": "alacritty -T cava_popup -e cava",
@@ -86,23 +86,23 @@
         "format-ethernet": " {bandwidthDownBits:>} 󰶡 {bandwidthUpBits:>} 󰶣",
         "tooltip-format-ethernet": "{ifname}: {ipaddr}/{cidr}",
         "format-disconnected": " Disconnected",
-        "on-click": "",
-        "interval": 3
+        "on-click": "~/.config/hypr/scripts/classy_alacritty.sh floatty impala",
+        "interval": 10
     },
     "cpu": {
-        "interval": 5,
+        "interval": 10,
         "format": "CPU : {usage:>3}%",
         "states": {
             "warning": 70,
             "critical": 90
         },
-        "on-click": "alacritty -T btm_popup -e btm"
+        "on-click": "~/.config/hypr/scripts/classy_alacritty.sh floatty btm"
     },
     "memory": {
-        "interval": 5,
+        "interval": 10,
         "format": "RAM : {:>3}%",
         // "on-click": "footclient -T waybar_htop -e htop",
-        "on-click": "alacritty -T btm_popup -e btm",
+        "on-click": "~/.config/hypr/scripts/classy_alacritty.sh floatty btm",
         "states": {
             "warning": 70,
             "critical": 90
