--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -19,7 +19,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, Z, exec, ~/.config/hypr/scripts/zoom.sh
+bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
