--- a/hypr/dot-config/hypr/conf/rules.conf
+++ b/hypr/dot-config/hypr/conf/rules.conf
@@ -14,4 +14,4 @@ windowrule = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 windowrule = float, size 1200 1000, class:floatty
-
+windowrule = float, size 90% 90%, class:Alacritty,workspace:1
