--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -6,12 +6,11 @@
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = alacritty
 $browser = qutebrowser
-$fileManager = dolphin
+$fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
 $menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, c, exec,~/.config/scripts/screenshot.sh 
 bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, wlogout -b 4 -T 400 -B 400
 bind = $mainMod, M, exit,
@@ -21,7 +20,12 @@ bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, Z, exec, ~/.config/scripts/zoom.sh
-# bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, c, exec,~/.config/scripts/screenshot.sh 
+bind = $mainMod SHIFT, l, exec,~/.config/scripts/swaylock.sh 
+bind = $mainMod SHIFT, A, exec,~/.config/scripts/emulator.sh
+bind = $mainMod SHIFT, SPACE, exec,~/.config/scripts/pkill.sh
+bind = $mainMod, f, fullscreen
+bind = $mainMod, n, cyclenext
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
