--- a/hypr/dot-config/hypr/conf/keybinds.conf
+++ b/hypr/dot-config/hypr/conf/keybinds.conf
@@ -7,6 +7,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $terminal = alacritty
 $browser = qutebrowser
 $fileManager = ~/.config/scripts/classy_alacritty.sh floatty yazi
+$wifi = ~/.config/scripts/classy_alacritty.sh floatty impala
+$bluetooth = ~/.config/scripts/classy_alacritty.sh floatty bluetui
 $menu = fuzzel
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
@@ -15,6 +17,8 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod SHIFT, E, exec, wlogout -b 4 -T 400 -B 400
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, B, exec, $bluetooth
+bind = $mainMod SHIFT, W, exec, $wifi
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod SHIFT, R, exec, hyprctl reload
@@ -26,6 +30,15 @@ bind = $mainMod SHIFT, A, exec,~/.config/scripts/emulator.sh
 bind = $mainMod SHIFT, SPACE, exec,~/.config/scripts/pkill.sh
 bind = $mainMod, f, fullscreen
 bind = $mainMod, n, cyclenext
+bind = SUPER SHIFT, N, exec, makoctl dismiss --all
+# TODO:
+# # Launch the clipboard manager
+# bindsym $mod+Ctrl+v exec cliphist list | fuzzel -d -w 90 -l 30 -p "Select an entry to copy it to your clipboard buffer:" | cliphist decode | wl-copy
+# # Delete an entry from the clipboard manager
+# bindsym $mod+Ctrl+x exec cliphist list | fuzzel -d -w 90 -l 30 -t cc9393ff -S cc9393ff -p "Select an entry to delete it from cliphist:" | cliphist delete
+# # Note: you can clear all cliphist entries by running `cliphist wipe`
+# keyboard layout
+# bindsym $mod+x exec ~/.config/sway/scripts/layout.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
